--- a/index.html
+++ b/index.html
@@ -26,8 +26,36 @@
       </div>
     </header>
 
+
+
     <div class="container">
       <section id="main_content">
+        
+    <style>
+      #map {
+        width: 500px;
+        height: 400px;
+      }
+    </style>
+    <div id="map"></div>
+    <script>
+
+      function initMap() {
+        var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 11,
+          center: {lat: -6.912988, lng: 107.613972}
+        });
+
+        var ctaLayer = new google.maps.KmlLayer({
+          url: 'stasiun.kml',
+          map: map
+        });
+      }
+    </script>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?callback=initMap">
+    </script>        
+        
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
