--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         });
 
         var ctaLayer = new google.maps.KmlLayer({
-          url: 'stasiun.kml',
+          url: 'https://gunaones.github.io/map_share/stasiun.kml',
           map: map
         });
       }
